# src/main/java/org/duckdns/celebritystrike/celebritystrike/dto/req/MessageToChatReq.java
@@ -1,0 +1,5 @@
+package org.duckdns.celebritystrike.celebritystrike.dto.req;
+
+import org.springframework.lang.NonNull;
+
+public record MessageToChatReq(@NonNull String message) {}
